fix a bug where description was not showing up

--- a/src/components/event/EventList.css
+++ b/src/components/event/EventList.css
@@ -8,3 +8,7 @@
     padding: 1rem;
     background-color: white;
 }
+
+.registration__event_title {
+    font-weight: bolder;
+}
